--- a/sk/package.json
+++ b/sk/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
-    "dev:backend": "cd ../pb && modd",
+    "dev:backend": "cd ../pb && go install github.com/cortesi/modd/cmd/modd@latest && modd",
     "backend": "AUDITLOG=users,posts ../pb/entrypoint.sh ./pocketbase serve --publicDir=../sk/build",
     "build": "vite build",
     "build:backend": "cd ../pb && go build",
