--- a/sk/package.json
+++ b/sk/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
+    "dev": "bunx --bun vite dev",
     "dev:backend": "cd ../pb && go install github.com/cortesi/modd/cmd/modd@latest && modd",
     "backend": "AUDITLOG=users,posts ../pb/entrypoint.sh ./pocketbase serve --publicDir=../sk/build",
-    "build": "vite build",
+    "build": "bunx --bun vite build",
     "build:backend": "cd ../pb && go build",
-    "typegen": "pocketbase-typegen --db ../pb/pb_data/data.db --out ./src/lib/pocketbase/generated-types.ts",
-    "test": "playwright test",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check .",
-    "format": "prettier --write ."
+    "typegen": "bunx pocketbase-typegen --db ../pb/pb_data/data.db --out ./src/lib/pocketbase/generated-types.ts",
+    "test": "bunx playwright test",
+    "preview": "bunx --bun vite preview",
+    "check": "bunx svelte-kit sync && bunx svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "bunx svelte-kit sync && bunx svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "bunx prettier --check .",
+    "format": "bunx prettier --write ."
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
