chore(tasks): run dev env on vs code folder open

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -89,6 +89,9 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "runOptions": {
+                "runOn": "folderOpen"
             }
         }
     ]
