--- a/sk/package.json
+++ b/sk/package.json
@@ -21,13 +21,23 @@
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.20",
+    "bits-ui": "^1.3.4",
+    "clsx": "^2.1.1",
     "pocketbase-typegen": "^1.2.1",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "sass": "^1.77.1",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^3.6.0",
     "svelte-preprocess": "^5.1.4",
+    "tailwind-merge": "^3.0.2",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
