--- a/sk/package.json
+++ b/sk/package.json
@@ -44,6 +44,7 @@
   },
   "type": "module",
   "dependencies": {
+    "ai-digest": "^1.0.8",
     "pocketbase": "^0.21.2",
     "zod": "^3.23.8"
   }
