--- a/sk/package.json
+++ b/sk/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.20",
     "bits-ui": "^1.3.4",
     "clsx": "^2.1.1",
+    "lucide-svelte": "^0.476.0",
     "pocketbase-typegen": "^1.2.1",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
