--- a/sk/package.json
+++ b/sk/package.json
@@ -27,6 +27,7 @@
     "bits-ui": "^1.3.4",
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.476.0",
+    "mode-watcher": "^0.5.1",
     "pocketbase-typegen": "^1.2.1",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
@@ -35,6 +36,7 @@
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^3.6.0",
     "svelte-preprocess": "^5.1.4",
+    "svelte-sonner": "^0.3.28",
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^3.4.17",
