feat(api): use environment variable for Gemini API key in post generation

--- a/pb/modd.conf
+++ b/pb/modd.conf
@@ -3,5 +3,5 @@
 **/*.go {
     prep: go build
     # prep: go test @dirmods
-    daemon +sigterm: cd .. && . ./.env && cd pb && ./pocketbase serve --dev --http 0.0.0.0:8090 --publicDir ../sk/build
+    daemon +sigterm: cd .. && . ./.env && cd pb && GEMINI_API_KEY=${GEMINI_API_KEY} ./pocketbase serve --dev --http 0.0.0.0:8090 --publicDir ../sk/build
 }
