--- a/sk/package.json
+++ b/sk/package.json
@@ -47,7 +47,11 @@
   },
   "type": "module",
   "dependencies": {
+    "dompurify": "^3.2.4",
+    "marked": "^15.0.7",
     "pocketbase": "^0.21.2",
+    "prism-svelte": "^0.5.0",
+    "prismjs": "^1.29.0",
     "zod": "^3.23.8"
   }
 }
